# pibox

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  entrypoint.sh  pyproject.toml  run.sh
defaults/: APPEND_SYSTEM.md
skills/hello-world/: SKILL.md
